--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Qbatch | Web and Mobile App Development Agency</title>
+    <link href="./dist/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="root"></div>
