--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qbatch | Web and Mobile App Development Agency</title>
-    <link href="./dist/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="root"></div>
-    <script src="./dist/bundle.js"></script>
   </body>
 </html>
